# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml
migrations/: 20221013210822_create_subscriptions_table.sql  20221027130639_create_subscriptions_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: password.rs
src/domain/: domain.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  helpers.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
