[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.0.2", features = ["macros", "rt"] }
config = "0.13"
uuid = { version = "1.3.4", features = ["v4", "serde"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
once_cell = "1.18.0"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.7.5"
serde-aux = "4.2.0"
unicode-segmentation = "1.10.1"
claim = "0.5"
validator = "0.16.1"
rand = { version = "0.8.5", features = ["std_rng"] }
thiserror = "1.0.40"
anyhow = "1.0.71"
base64 = "0.13"
argon2 = { version = "0.4", features = ["std"] }
htmlescape = "0.3.1"
urlencoding = "2.1.2"
hmac = { version = "0.12.1", features = ["std"] }
hex = "0.4.3"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web-lab = "0.19.1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dev-dependencies]
fake = "~2.3"
linkify = "0.10.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
serde_json = "1.0.99"
serde_urlencoded = "0.7.1"
wiremock = "0.5.19"
